--- a/HelloWarsBot/HelloWarsBot.csproj
+++ b/HelloWarsBot/HelloWarsBot.csproj
@@ -125,7 +125,9 @@
     <Compile Include="BusinessLogic\Interface\IBlastRadiusHelper.cs" />
     <Compile Include="BusinessLogic\Interface\IHelloWarsBotService.cs" />
     <Compile Include="BusinessLogic\Interface\ILocationHelper.cs" />
+    <Compile Include="BusinessLogic\Interface\IPathFinding.cs" />
     <Compile Include="BusinessLogic\LocationHelper.cs" />
+    <Compile Include="BusinessLogic\PathFinding.cs" />
     <Compile Include="Controller\Interface\IHelloWarsBotController.cs" />
     <Compile Include="Controller\HelloWarsBotController.cs" />
     <Compile Include="Global.asax.cs">
@@ -134,6 +136,7 @@
     <Compile Include="Models\Algorithm\AlgorithmParameters.cs" />
     <Compile Include="Models\Algorithm\AllyMapPoint.cs" />
     <Compile Include="Models\Algorithm\EnemyMapPoint.cs" />
+    <Compile Include="Models\Algorithm\LocationPoint.cs" />
     <Compile Include="Models\State\BoardTile.cs" />
     <Compile Include="Models\State\Bomb.cs" />
     <Compile Include="Models\Actions\BotAction.cs" />
@@ -148,12 +151,16 @@
   <ItemGroup>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
