Changes To Blast Radius

--- a/HelloWarsBot/HelloWarsBot.csproj
+++ b/HelloWarsBot/HelloWarsBot.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controller\HelloWarsBotController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Models\Algorithm\AlgorithmParameters.cs" />
     <Compile Include="Models\Algorithm\AllyMapPoint.cs" />
@@ -150,7 +151,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
-    <Content Include="Global.asax" />
+    <Content Include="Global.asax">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
